--- a/src/main/resources/templates/annotation.html
+++ b/src/main/resources/templates/annotation.html
@@ -18,6 +18,7 @@
     <script type="text/javascript" src="/assets/common/js/jquery.ui.touch-punch.min.js"></script>
     <script type="text/javascript" src="/assets/common/js/jquery.initialize.min.js"></script>
     <script type="text/javascript" src="/assets/viewer/js/viewer.js"></script>
+    <script type="text/javascript" src="/assets/common/js/jquery.timeago.js"></script>
     <script type="text/javascript" src="/assets/annotation/js/svg.min.js"></script>
     <script type="text/javascript" src="/assets/annotation/js/svg.draw.js"></script>
     <script type="text/javascript" src="/assets/annotation/js/drawSvgAnnotation.js"></script>
