added default folders for license and files, added small fixes

--- a/src/main/resources/templates/annotation.html
+++ b/src/main/resources/templates/annotation.html
@@ -3,8 +3,8 @@
 <html>
 <head>
     <title>GroupDocs.Annotation for Java Spring</title>
-    <link rel="stylesheet" href="/assets/common/css/all.min.css">
-    <link rel="stylesheet" href="/assets/common/css/v4-shims.min.css">
+    <link type="text/css" rel="stylesheet" href="/assets/common/css/all.min.css">
+    <link type="text/css" rel="stylesheet" href="/assets/common/css/v4-shims.min.css">
     <link type="text/css" rel="stylesheet" href="/assets/common/css/swiper.min.css">
     <link type="text/css" rel="stylesheet" href="/assets/common/css/jquery-ui.min.css"/>
     <link type="text/css" rel="stylesheet" href="/assets/common/css/circle-progress.css"/>
@@ -17,6 +17,7 @@
     <script type="text/javascript" src="/assets/common/js/jquery-ui.min.js"></script>
     <script type="text/javascript" src="/assets/common/js/jquery.ui.touch-punch.min.js"></script>
     <script type="text/javascript" src="/assets/common/js/jquery.initialize.min.js"></script>
+    <script type="text/javascript" src="/assets/common/js/jquery.timeago.js"></script>
     <script type="text/javascript" src="/assets/viewer/js/viewer.js"></script>
     <script type="text/javascript" src="/assets/common/js/jquery.timeago.js"></script>
     <script type="text/javascript" src="/assets/annotation/js/svg.min.js"></script>
