configured deploy on external server

--- a/src/main/resources/templates/annotation.html
+++ b/src/main/resources/templates/annotation.html
@@ -3,29 +3,29 @@
 <html>
 <head>
     <title>GroupDocs.Annotation for Java Spring</title>
-    <link type="text/css" rel="stylesheet" href="/assets/common/css/all.min.css">
-    <link type="text/css" rel="stylesheet" href="/assets/common/css/v4-shims.min.css">
-    <link type="text/css" rel="stylesheet" href="/assets/common/css/swiper.min.css">
-    <link type="text/css" rel="stylesheet" href="/assets/common/css/jquery-ui.min.css"/>
-    <link type="text/css" rel="stylesheet" href="/assets/common/css/circle-progress.css"/>
-    <link type="text/css" rel="stylesheet" href="/assets/viewer/css/viewer.css"/>
-    <link type="text/css" rel="stylesheet" href="/assets/viewer/css/viewer.mobile.css"/>
-    <link type="text/css" rel="stylesheet" href="/assets/viewer/css/viewer-dark.css"/>
-    <link type="text/css" rel="stylesheet" href="/assets/annotation/css/annotation.css"/>
-    <script type="text/javascript" src="/assets/common/js/jquery.min.js"></script>
-    <script type="text/javascript" src="/assets/common/js/swiper.min.js"></script>
-    <script type="text/javascript" src="/assets/common/js/jquery-ui.min.js"></script>
-    <script type="text/javascript" src="/assets/common/js/jquery.ui.touch-punch.min.js"></script>
-    <script type="text/javascript" src="/assets/common/js/jquery.initialize.min.js"></script>
-    <script type="text/javascript" src="/assets/common/js/jquery.timeago.js"></script>
-    <script type="text/javascript" src="/assets/viewer/js/viewer.js"></script>
-    <script type="text/javascript" src="/assets/common/js/jquery.timeago.js"></script>
-    <script type="text/javascript" src="/assets/annotation/js/svg.min.js"></script>
-    <script type="text/javascript" src="/assets/annotation/js/svg.draw.js"></script>
-    <script type="text/javascript" src="/assets/annotation/js/drawSvgAnnotation.js"></script>
-    <script type="text/javascript" src="/assets/annotation/js/drawTextAnnotation.js"></script>
-    <script type="text/javascript" src="/assets/annotation/js/drawFieldAnnotation.js"></script>
-    <script type="text/javascript" src="/assets/annotation/js/annotation.js"></script>
+    <link type="text/css" rel="stylesheet" th:href="@{'/assets/common/css/all.min.css'}">
+    <link type="text/css" rel="stylesheet" th:href="@{'/assets/common/css/v4-shims.min.css'}">
+    <link type="text/css" rel="stylesheet" th:href="@{'/assets/common/css/swiper.min.css'}">
+    <link type="text/css" rel="stylesheet" th:href="@{'/assets/common/css/jquery-ui.min.css'}"/>
+    <link type="text/css" rel="stylesheet" th:href="@{'/assets/common/css/circle-progress.css'}"/>
+    <link type="text/css" rel="stylesheet" th:href="@{'/assets/viewer/css/viewer.css'}"/>
+    <link type="text/css" rel="stylesheet" th:href="@{'/assets/viewer/css/viewer.mobile.css'}"/>
+    <link type="text/css" rel="stylesheet" th:href="@{'/assets/viewer/css/viewer-dark.css'}"/>
+    <link type="text/css" rel="stylesheet" th:href="@{'/assets/annotation/css/annotation.css'}"/>
+    <script type="text/javascript" th:src="@{'/assets/common/js/jquery.min.js'}"></script>
+    <script type="text/javascript" th:src="@{'/assets/common/js/swiper.min.js'}"></script>
+    <script type="text/javascript" th:src="@{'/assets/common/js/jquery-ui.min.js'}"></script>
+    <script type="text/javascript" th:src="@{'/assets/common/js/jquery.ui.touch-punch.min.js'}"></script>
+    <script type="text/javascript" th:src="@{'/assets/common/js/jquery.initialize.min.js'}"></script>
+    <script type="text/javascript" th:src="@{'/assets/common/js/jquery.timeago.js'}"></script>
+    <script type="text/javascript" th:src="@{'/assets/viewer/js/viewer.js'}"></script>
+    <script type="text/javascript" th:src="@{'/assets/common/js/jquery.timeago.js'}"></script>
+    <script type="text/javascript" th:src="@{'/assets/annotation/js/svg.min.js'}"></script>
+    <script type="text/javascript" th:src="@{'/assets/annotation/js/svg.draw.js'}"></script>
+    <script type="text/javascript" th:src="@{'/assets/annotation/js/drawSvgAnnotation.js'}"></script>
+    <script type="text/javascript" th:src="@{'/assets/annotation/js/drawTextAnnotation.js'}"></script>
+    <script type="text/javascript" th:src="@{'/assets/annotation/js/drawFieldAnnotation.js'}"></script>
+    <script type="text/javascript" th:src="@{'/assets/annotation/js/annotation.js'}"></script>
 </head>
 <body>
 <div id="element"></div>
@@ -33,7 +33,7 @@
     /*<![CDATA[*/
     $('#element').annotation({
         /*[+
-        applicationPath: 'http://' + [[${globalConfiguration.server.hostAddress}]] + ':' + [[${globalConfiguration.server.httpPort}]] + '/annotation',
+        applicationPath: 'http://' + [[${globalConfiguration.server.hostAddress}]] + ':' + [[${globalConfiguration.server.httpPort}]] + [[${globalConfiguration.server.applicationContextPath}]] + '/annotation',
         +]*/
         defaultDocument: /*[[${annotationConfiguration.defaultDocument}]]*/'',
         preloadPageCount: /*[[${annotationConfiguration.preloadPageCount}]]*/'',
