added enableRightClick to template

--- a/src/main/resources/templates/annotation.html
+++ b/src/main/resources/templates/annotation.html
@@ -43,6 +43,7 @@
         print: /*[[${annotationConfiguration.print}]]*/'',
         browse: /*[[${annotationConfiguration.browse}]]*/'',
         rewrite: /*[[${annotationConfiguration.rewrite}]]*/'',
+        enableRightClick: /*[[${annotationConfiguration.enableRightClick}]]*/'',
         textAnnotation: /*[[${annotationConfiguration.textAnnotation}]]*/'',
         areaAnnotation: /*[[${annotationConfiguration.areaAnnotation}]]*/'',
         pointAnnotation: /*[[${annotationConfiguration.pointAnnotation}]]*/'',
