moved hostAddress config into application configuration

--- a/src/main/resources/templates/annotation.html
+++ b/src/main/resources/templates/annotation.html
@@ -32,7 +32,7 @@
     /*<![CDATA[*/
     $('#element').annotation({
         /*[+
-        applicationPath: 'http://' + [[${globalConfiguration.server.hostAddress}]] + ':' + [[${globalConfiguration.server.httpPort}]] + [[${globalConfiguration.server.applicationContextPath}]] + '/annotation',
+        applicationPath: 'http://' + [[${globalConfiguration.application.hostAddress}]] + ':' + [[${globalConfiguration.server.httpPort}]] + [[${globalConfiguration.server.applicationContextPath}]] + '/annotation',
         +]*/
         defaultDocument: /*[[${annotationConfiguration.defaultDocument}]]*/'',
         preloadPageCount: /*[[${annotationConfiguration.preloadPageCount}]]*/'',
