added zoom and fit width configs

--- a/src/main/resources/templates/annotation.html
+++ b/src/main/resources/templates/annotation.html
@@ -57,7 +57,9 @@
         textUnderlineAnnotation: /*[[${annotationConfiguration.textUnderlineAnnotation}]]*/'',
         distanceAnnotation: /*[[${annotationConfiguration.distanceAnnotation}]]*/'',
         downloadOriginal:  /*[[${annotationConfiguration.downloadOriginal}]]*/'',
-        downloadAnnotated:  /*[[${annotationConfiguration.downloadAnnotated}]]*/''
+        downloadAnnotated:  /*[[${annotationConfiguration.downloadAnnotated}]]*/'',
+        zoom:  /*[[${annotationConfiguration.zoom}]]*/'',
+        fitWidth:  /*[[${annotationConfiguration.fitWidth}]]*/''
     });
     /*]]>*/
 </script>
