--- a/src/main/resources/templates/annotation.html
+++ b/src/main/resources/templates/annotation.html
@@ -12,6 +12,8 @@
     <link type="text/css" rel="stylesheet" th:href="@{'/assets/viewer/css/viewer.mobile.css'}"/>
     <link type="text/css" rel="stylesheet" th:href="@{'/assets/viewer/css/viewer-dark.css'}"/>
     <link type="text/css" rel="stylesheet" th:href="@{'/assets/annotation/css/annotation.css'}"/>
+    <link type="text/css" rel="stylesheet" th:href="@{'/assets/annotation/css/bcPicker.css'}" />
+    <link type="text/css" rel="stylesheet" th:href="@{'/assets/annotation/css/bcPicker.mobile.css'}" />
     <script type="text/javascript" th:src="@{'/assets/common/js/jquery.min.js'}"></script>
     <script type="text/javascript" th:src="@{'/assets/common/js/swiper.min.js'}"></script>
     <script type="text/javascript" th:src="@{'/assets/common/js/jquery-ui.min.js'}"></script>
@@ -22,6 +24,7 @@
     <script type="text/javascript" th:src="@{'/assets/common/js/jquery.timeago.js'}"></script>
     <script type="text/javascript" th:src="@{'/assets/annotation/js/svg.min.js'}"></script>
     <script type="text/javascript" th:src="@{'/assets/annotation/js/svg.draw.js'}"></script>
+    <script type="text/javascript" th:src="@{'/assets/annotation/js/bcPicker.js'}"></script>
     <script type="text/javascript" th:src="@{'/assets/annotation/js/drawSvgAnnotation.js'}"></script>
     <script type="text/javascript" th:src="@{'/assets/annotation/js/drawTextAnnotation.js'}"></script>
     <script type="text/javascript" th:src="@{'/assets/annotation/js/annotation.js'}"></script>
