--- a/src/main/resources/templates/annotation.html
+++ b/src/main/resources/templates/annotation.html
@@ -1,70 +1,23 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<html>
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
+    <meta charset="utf-8"/>
     <title>GroupDocs.Annotation for Java Spring</title>
-    <link type="text/css" rel="stylesheet" th:href="@{'/assets/common/css/all.min.css'}">
-    <link type="text/css" rel="stylesheet" th:href="@{'/assets/common/css/v4-shims.min.css'}">
-    <link type="text/css" rel="stylesheet" th:href="@{'/assets/common/css/swiper.min.css'}">
-    <link type="text/css" rel="stylesheet" th:href="@{'/assets/common/css/jquery-ui.min.css'}"/>
-    <link type="text/css" rel="stylesheet" th:href="@{'/assets/common/css/circle-progress.css'}"/>
-    <link type="text/css" rel="stylesheet" th:href="@{'/assets/viewer/css/viewer.css'}"/>
-    <link type="text/css" rel="stylesheet" th:href="@{'/assets/viewer/css/viewer.mobile.css'}"/>
-    <link type="text/css" rel="stylesheet" th:href="@{'/assets/viewer/css/viewer-dark.css'}"/>
-    <link type="text/css" rel="stylesheet" th:href="@{'/assets/annotation/css/annotation.css'}"/>
-    <link type="text/css" rel="stylesheet" th:href="@{'/assets/annotation/css/bcPicker.css'}" />
-    <link type="text/css" rel="stylesheet" th:href="@{'/assets/annotation/css/bcPicker.mobile.css'}" />
-    <script type="text/javascript" th:src="@{'/assets/common/js/jquery.min.js'}"></script>
-    <script type="text/javascript" th:src="@{'/assets/common/js/swiper.min.js'}"></script>
-    <script type="text/javascript" th:src="@{'/assets/common/js/jquery-ui.min.js'}"></script>
-    <script type="text/javascript" th:src="@{'/assets/common/js/jquery.ui.touch-punch.min.js'}"></script>
-    <script type="text/javascript" th:src="@{'/assets/common/js/jquery.initialize.min.js'}"></script>
-    <script type="text/javascript" th:src="@{'/assets/common/js/jquery.timeago.js'}"></script>
-    <script type="text/javascript" th:src="@{'/assets/viewer/js/viewer.js'}"></script>
-    <script type="text/javascript" th:src="@{'/assets/common/js/jquery.timeago.js'}"></script>
-    <script type="text/javascript" th:src="@{'/assets/annotation/js/svg.min.js'}"></script>
-    <script type="text/javascript" th:src="@{'/assets/annotation/js/svg.draw.js'}"></script>
-    <script type="text/javascript" th:src="@{'/assets/annotation/js/bcPicker.js'}"></script>
-    <script type="text/javascript" th:src="@{'/assets/annotation/js/drawSvgAnnotation.js'}"></script>
-    <script type="text/javascript" th:src="@{'/assets/annotation/js/drawTextAnnotation.js'}"></script>
-    <script type="text/javascript" th:src="@{'/assets/annotation/js/annotation.js'}"></script>
+    <base href="/"/>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
 </head>
 <body>
-<div id="element"></div>
-<script th:inline="javascript">
-    /*<![CDATA[*/
-    $('#element').annotation({
-        /*[+
-        applicationPath: 'http://' + [[${globalConfiguration.application.hostAddress}]] + ':' + [[${globalConfiguration.server.httpPort}]] + [[${globalConfiguration.server.applicationContextPath}]] + '/annotation',
-        +]*/
-        defaultDocument: /*[[${annotationConfiguration.defaultDocument}]]*/'',
-        preloadPageCount: /*[[${annotationConfiguration.preloadPageCount}]]*/'',
-        pageSelector: /*[[${annotationConfiguration.pageSelector}]]*/'',
-        download: /*[[${annotationConfiguration.download}]]*/'',
-        upload: /*[[${annotationConfiguration.upload}]]*/'',
-        print: /*[[${annotationConfiguration.print}]]*/'',
-        browse: /*[[${annotationConfiguration.browse}]]*/'',
-        rewrite: /*[[${annotationConfiguration.rewrite}]]*/'',
-        enableRightClick: /*[[${annotationConfiguration.enableRightClick}]]*/'',
-        textAnnotation: /*[[${annotationConfiguration.textAnnotation}]]*/'',
-        areaAnnotation: /*[[${annotationConfiguration.areaAnnotation}]]*/'',
-        pointAnnotation: /*[[${annotationConfiguration.pointAnnotation}]]*/'',
-        textStrikeoutAnnotation: /*[[${annotationConfiguration.textStrikeoutAnnotation}]]*/'',
-        polylineAnnotation: /*[[${annotationConfiguration.polylineAnnotation}]]*/'',
-        textFieldAnnotation: /*[[${annotationConfiguration.textFieldAnnotation}]]*/'',
-        watermarkAnnotation: /*[[${annotationConfiguration.watermarkAnnotation}]]*/'',
-        textReplacementAnnotation: /*[[${annotationConfiguration.textReplacementAnnotation}]]*/'',
-        arrowAnnotation: /*[[${annotationConfiguration.arrowAnnotation}]]*/'',
-        textRedactionAnnotation: /*[[${annotationConfiguration.textRedactionAnnotation}]]*/'',
-        resourcesRedactionAnnotation: /*[[${annotationConfiguration.resourcesRedactionAnnotation}]]*/'',
-        textUnderlineAnnotation: /*[[${annotationConfiguration.textUnderlineAnnotation}]]*/'',
-        distanceAnnotation: /*[[${annotationConfiguration.distanceAnnotation}]]*/'',
-        downloadOriginal:  /*[[${annotationConfiguration.downloadOriginal}]]*/'',
-        downloadAnnotated:  /*[[${annotationConfiguration.downloadAnnotated}]]*/'',
-        zoom:  /*[[${annotationConfiguration.zoom}]]*/'',
-        fitWidth:  /*[[${annotationConfiguration.fitWidth}]]*/''
-    });
-    /*]]>*/
-</script>
+<client-root></client-root>
+<script th:src="@{'/angular/annotation/runtime-es2015.js'}" type="module"></script>
+<script th:src="@{'/angular/annotation/polyfills-es2015.js'}" type="module"></script>
+<script th:src="@{'/angular/annotation/runtime-es5.js'}" nomodule></script>
+<script th:src="@{'/angular/annotation/polyfills-es5.js'}" nomodule></script>
+<script th:src="@{'/angular/annotation/styles-es2015.js'}" type="module"></script>
+<script th:src="@{'/angular/annotation/styles-es5.js'}" nomodule></script>
+<script th:src="@{'/angular/annotation/vendor-es2015.js'}" type="module"></script>
+<script th:src="@{'/angular/annotation/main-es2015.js'}" type="module"></script>
+<script th:src="@{'/angular/annotation/vendor-es5.js'}" nomodule></script>
+<script th:src="@{'/angular/annotation/main-es5.js'}" nomodule></script>
 </body>
 </html>
